--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,11 +2,11 @@
     <mat-toolbar class="mat-elevation-z6 toolbar__mat" color="primary">    
       <span>Mi Perfil</span>
       <span class="span-spacer"></span>
-      <button mat-icon-button class="toolbar-icon" aria-label="Linkdin icon">
+      <a href = "https://www.linkedin.com/in/jonathan-lozada-cuenca" mat-icon-button class="toolbar-icon" aria-label="Linkdin icon">
         <mat-icon svgIcon = "linkedin-icon"></mat-icon>
-      </button>
-      <button mat-icon-button class="toolbar-icon" aria-label="Github icon">
+      </a>
+      <a href = "https://github.com/JonathanLozadaGit" mat-icon-button class="toolbar-icon" aria-label="Github icon">
         <mat-icon svgIcon = "github-icon"></mat-icon>
-      </button>
+      </a>
     </mat-toolbar>
   </div>
