--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -1,7 +1,7 @@
 <section class = "presentation" id = "presentation">
     <div class = "presentation__img">
-        <img class = "bottom"src = "../../assets/images/fotoPerfil.PNG" />
-        <img class = "top"src = "../../assets/images/fotoPerfil4.PNG" />
+        <img class = "bottom"src = "assets/images/fotoPerfil.PNG" />
+        <img class = "top"src = "assets/images/fotoPerfil4.PNG" />
     </div>
     <div class = "presentation__text">
         <h1 class = "">Buenas, soy Jonathan!!</h1>
