--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
 
 <!-- Body -->
 <div class="container" role="main">
+  <app-presentation class ="section" id="section1"></app-presentation>
   <app-bubble></app-bubble>
-  <app-presentation></app-presentation>
-  
+  <app-knowledge  class ="section" id = "section2"></app-knowledge>
   <app-fav-button></app-fav-button>
-  <app-knowledge></app-knowledge>
 </div>
 
