--- a/src/app/fav-button/fav-button.component.scss
+++ b/src/app/fav-button/fav-button.component.scss
@@ -2,12 +2,12 @@
     color: primary,
 }
 
-button.md-fab-bottom-right {
+button.md-fab-bottom-left {
     top: auto;
     right: auto;
     bottom: 20px;
     left: 20px;
-    position: absolute;
+    position: fixed !important;
 }
 
 ::ng-deep .md-menu {
