--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,10 @@ $desktop: 1280px;
   }
 
 
-* { font-family: Courier, "Lucida Console", monospace;}
+* { 
+  font-family: Courier, "Lucida Console", monospace;
+  scroll-behavior: smooth;
+}
 
 html, body { height: 100%; }
 body { margin: 0;  }
