--- a/src/app/knowledge/knowledge.component.html
+++ b/src/app/knowledge/knowledge.component.html
@@ -1,12 +1,19 @@
 <section class="section__knowledge">
-    <h2>CONOCIMIENTOS</h2>
+    <h2>·· CONOCIMIENTOS ··</h2>
     <div class="section__container">
-        <div class="section__container__items">
-            <div class="section__container__items__item"></div>
-            <div class="section__container__items__item"></div>
-        </div>
-        <div class="section__container_view">
-
-        </div>
+        <mat-tab-group mat-align-tabs="center" class="section__container__tabs">
+            <mat-tab>
+                <ng-template mat-tab-label>
+                  <h3>Tecnologías</h3>
+                </ng-template>
+                <app-list-card-item></app-list-card-item>            
+            </mat-tab>
+            <mat-tab>
+                <ng-template mat-tab-label>
+                  <h3>Herramientas</h3>
+                </ng-template>
+                <app-list-card-item></app-list-card-item>
+            </mat-tab>
+        </mat-tab-group>
     </div>
 </section>
