--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,19 @@
     <mat-toolbar class="mat-elevation-z6 toolbar__mat" color="primary">    
       <span>Mi Perfil</span>
       <span class="span-spacer"></span>
+      <button   mat-icon-button class="toolbar-icon" aria-label="Language" [matMenuTriggerFor]="menu" >
+        <mat-icon>emoji_flags</mat-icon>
+      </button>
+      <mat-menu class = "md-menu" #menu="matMenu" xPosition="after">
+        <button  mat-menu-item (click)="selectLanguage('es')">
+          <mat-icon class = "items-menu">emoji_flags</mat-icon>
+          <span>Español</span>
+        </button>
+        <button mat-menu-item (click)="selectLanguage('en')">
+          <mat-icon class = "items-menu">emoji_flags</mat-icon>
+          <span>Inglés</span>
+        </button>
+      </mat-menu>
       <a href = "https://www.linkedin.com/in/jonathan-lozada-cuenca" mat-icon-button class="toolbar-icon" aria-label="Linkdin icon">
         <mat-icon svgIcon = "linkedin-icon"></mat-icon>
       </a>
