--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -1,12 +1,10 @@
 <section class = "presentation" id = "presentation">
     <div class = "presentation__img">
-        <img class = "bottom"src = "assets/images/fotoPerfil.PNG" />
-        <img class = "top"src = "assets/images/fotoPerfil4.PNG" />
+        <img class = "bottom"src = "{{perfil.imageProfile1}}" />
+        <img class = "top"src = "{{perfil.imageProfile2}}" />
     </div>
     <div class = "presentation__text">
-        <h1 class = "">Buenas, soy Jonathan!!</h1>
-        <p>Soy una persona soñadora, resiliente, dispuesta a ayudar y con ganas constantes 
-        de aprender y mejorar en todos los aspectos, 
-        con interés en el desarrollo web y el IoT.</p>
+        <h1 class = "">{{perfil.greeting}}, {{perfil.yo_soy}} {{perfil.name}}!!</h1>
+        <p>{{perfil.shortPresentation}}</p>
     </div>
 </section>
