--- a/src/app/presentation/presentation.component.scss
+++ b/src/app/presentation/presentation.component.scss
@@ -5,14 +5,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 110px;
+    padding-top: 80px;
 
     @include desktop {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        padding-top: 250px;
-        padding-bottom: 220px;
+        padding-top: 135px;
+        padding-bottom: 100px;
         //width: 80%;
     }
 
@@ -22,27 +22,29 @@
         width: 200px;
         height: 200px; 
         position: relative;
-        
+        padding-bottom: 10px;
 
         @include tablet {
             width: 300px;
             height: 300px;
+            padding-bottom: 20px;
         }
         @include desktop {
             width: 500px;
             height: 500px;
             margin-bottom: 0px;
             padding-left: 15%;
-            padding-right: 5%;
+            
           }
         
         & img {
+            top: 10%;
             position: absolute;
             width: 100%;
             border-radius: 50%;
             box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
             @include desktop {
-                width: 500px;
+                width: 400px;
             }
         }
         
@@ -56,27 +58,15 @@
         
         //position: fixed;
         @include desktop {
-            width: 40%;
+            width: 45%;
             padding: 50px;
             //position: fixed;
         }
 
-       /* & h1 {
-            animation: pulse 1s infinite alternate
-        }*/
-        
-
+        & h1 {
+            text-align: center;
+        }
     }
-
-  /*  @keyframes pulse {
-        0% {
-          background-color: #001F3F;
-        }
-        100% {
-          background-color: #FF4136;
-        }
-      }
-      */
 }
 
 img.top{
