--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
 
 <!-- Body -->
 <div class="container" role="main">
-  <app-presentation class ="section" id="section1" [perfil] = "perfil"></app-presentation>
+  <app-presentation class ="section" id="section0" [perfil] = "perfil"></app-presentation>
   <app-bubble></app-bubble>
-  <app-knowledge  class ="section" id = "section2" [knowledges] = "knowledges"></app-knowledge>
-  <app-fav-button></app-fav-button>
+  <app-knowledge  class ="section" id = "section1" [knowledges] = "knowledges"></app-knowledge>
+  <app-fav-button [sections] = "sections"></app-fav-button>
 </div>
 
