cambios en la apariencia de la página

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,11 @@
 <!-- Body -->
 <div class="container" role="main">
   <app-presentation class ="section" id="section0" [perfil] = "perfil"></app-presentation>
+  <app-about-me class ="section" id="section1"></app-about-me>
   <app-bubble></app-bubble>
-  <app-knowledge  class ="section" id = "section1" [knowledges] = "knowledges"></app-knowledge>
+  <app-knowledge  class ="section" id = "section2" [knowledges] = "knowledges"></app-knowledge>
   <app-fav-button [sections] = "sections"></app-fav-button>
 </div>
+
+<app-footer></app-footer>
 
