--- a/src/app/card-item/card-item.component.html
+++ b/src/app/card-item/card-item.component.html
@@ -2,7 +2,7 @@
     <mat-card class="example-card">
         <mat-card-header>
           <div mat-card-avatar class="example-header-image" style="background-image: url({{item.image}});"></div>
-          <mat-card-title><h4>{{item.title}}</h4></mat-card-title>
+          <mat-card-title><p class="p__secundary p__item">{{item.title}}</p></mat-card-title>
         </mat-card-header>         
     </mat-card>
 </div>
