--- a/src/app/presentation/presentation.component.scss
+++ b/src/app/presentation/presentation.component.scss
@@ -1,100 +1,147 @@
 @import "../../styles.scss";
 
 .presentation {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 80px;
+    background-image: url(../../assets/images/fondo_presentation.jpg);
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
-    @include desktop {
+    &__container {
         display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        padding-top: 135px;
-        padding-bottom: 100px;
-        //width: 80%;
-    }
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 110px;
+        opacity: 0;
 
-    &__img {
-        
-        margin: inherit;
-        width: 200px;
-        height: 200px; 
-        position: relative;
-        padding-bottom: 10px;
+        animation-name: opacityFunction;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: both;
+        animation-iteration-count: 0s;
+        animation-duration: 3.5s;
+        animation-delay: 1s;
+        animation-direction: normal;
 
         @include tablet {
-            width: 300px;
-            height: 300px;
-            padding-bottom: 20px;
+            
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding-top: 110px;
+            
         }
         @include desktop {
-            width: 500px;
-            height: 500px;
-            margin-bottom: 0px;
-            padding-left: 15%;
-            
-          }
-        
-        & img {
-            top: 10%;
-            position: absolute;
-            width: 100%;
-            border-radius: 50%;
-            box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+            width: 1300px;
+            margin: auto;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            padding-top: 145px;
+            padding-bottom: 100px;
+        }
+
+        &__img {
+            width: 50%;
+            margin: auto;
+    
+            @include tablet {
+                width: 300px;
+            }
             @include desktop {
-                width: 400px;
+                width: 50%;              
+                margin: auto;
+                padding-left: 200px;
+                box-sizing: border-box;
+              }
+            
+            & img {
+                top: 10%;
+                margin: auto;
+                width: 100%;
+                border-radius: 50%;
+
+                
+
+                @include desktop {
+                    width: 300px;
+                }
+                @include tablet {
+                    width:250px;
+                }
+            }       
+        }
+
+    
+        &__text {
+            width:80%;
+            padding: 35px;
+            margin: auto;
+            
+            @include tablet {
+                width:75%;
+                padding: 35px;
+                margin: auto;
+            }
+            @include desktop {
+                width: 50%;
+                padding: 40px;
+                padding-left: 0px;
+            }
+    
+            & h1,p {
+                text-align: center;
             }
         }
-        
-    }
-
-    &__text {
-        width:70%;
-        padding: 35px;
-        margin: auto;
-        height: auto;
-        
-        //position: fixed;
-        @include desktop {
-            width: 45%;
-            padding: 50px;
-            //position: fixed;
-        }
-
-        & h1 {
-            text-align: center;
-        }
     }
 }
 
-img.top{
-    animation-name: opacityFunction;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-duration: 1500ms;
-    animation-delay: 500ms;
-    animation-direction: alternate;
-}
+img:hover {
+    box-shadow: 0 0 20px deeppink; 
+ }
 
+ @keyframes bounce {
+	0%, 100%, 20%, 50%, 80% {
+		-webkit-transform: translateY(0);
+		-ms-transform:     translateY(0);
+		transform:         translateY(0)
+	}
+	40% {
+		-webkit-transform: translateY(-30px);
+		-ms-transform:     translateY(-30px);
+		transform:         translateY(-30px)
+	}
+	60% {
+		-webkit-transform: translateY(-15px);
+		-ms-transform:     translateY(-15px);
+		transform:         translateY(-15px)
+	}
+}
 
 @keyframes opacityFunction {
-   0% {opacity:1; }
-  10% { opacity:0.90; }
-  20% { opacity:0.80; }
-  30% { opacity:0.70; }
-  40% { opacity:0.60; }
+  100% {opacity:1; transform: translateY(0)}
+  90% { opacity:0.90; }
+  80% { opacity:0.80; }
+  70% { opacity:0.70; }
+  60% { opacity:0.60; }
   50% { opacity:0.50; }
-  60% { opacity:0.40; }
-  70% { opacity:0.30; }
-  80% { opacity:0.20; }
-  90% { opacity:0.10; }
-  100% { opacity:0; }
+  40% { opacity:0.40; }
+  30% { opacity:0.30; }
+  20% { opacity:0.20; }
+  10% { opacity:0.10; }
+  0% { opacity:0; transform: translateY(-50px)}
   }
 
 
 
-
-
+/*
+animation-duration: 2s;
+animation-fill-mode: both;
+animation-timing-function: ease-in-out;
+animation-iteration-count: 1s;
+animation-name: bounce;
+*/
 
