--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 
 //Colors
-$font-primary: #006064;
-$font-secundary: grey;
+$title-primary: #263238;
+$title-secundary: #263238;
+$title-item: mediumturquoise;;
+$subtitle-primary: #263238;
+$subtitle-secundary: white;
+$font-primary: rgb(104, 100, 100);
+$font-secundary: white;
 $theme: #006064;
-$theme-primary: rgb(236, 234, 223);
-$theme-secundary: rgb(145, 166, 167);
+$theme-primary: gainsboro;
+$theme-secundary: mediumturquoise;
+$theme-accent: #263238;
+
 //Size
 $tablet: 768px;
 $desktop: 1280px;
@@ -26,67 +35,191 @@ $desktop: 1280px;
 
 
 * { 
-  font-family: Courier, "Lucida Console", monospace;
+  font-family: 'Bitter', serif;
   scroll-behavior: smooth;
 }
 
 html, body { height: 100%; }
 body { margin: 0;  }
 
-h1, h4, p { 
-    font-family: Courier, "Lucida Console", monospace;
+//Font type
+h1, h3, h4, p { 
+    font-family: 'Bitter', serif;
     font-weight: bold;
 } 
-    
-h2, h3 {
-  font-family: Fantasy, "Copperplate", monospace;
-  font-weight: bold;
+ h2 { 
+  font-family: 'Alfa Slab One', cursive;
+  text-shadow: 0 0 20;
 }
-h1, h2 {
-    color : $font-primary; 
-    font-size: 30px;
-    
+
+
+
+h1 {
+    font-size: 3em;
+    line-height: 1em;
     @include tablet {
         font-size: 55px;
         line-height: 64px;
         height: auto;
-    }  
+    } 
+    @include desktop {
+      font-size: 55px;
+      line-height: 64px;
+      height: auto;
+    } 
+
+    &.h1__presentation {
+      color: mediumturquoise;
+      text-shadow: 0 0 20px $font-primary;
+    }
+   
 }
 
-h3 {
-  color : $font-primary; 
-    font-size: 15px;
-    
-    @include tablet {
-        font-size: 40px;
-        height: auto;
-    }  
-}
-p {
-    color: $font-secundary;
+
+
+h2 {
     font-size: 25px;
-    line-height: 25px;
     
     @include tablet {
         font-size: 30px;
-        line-height: 45px;
+        line-height: 64px;
         height: auto;
+    }
+    @include desktop {
+      font-size: 40px;
+      line-height: 64px;
+      height: auto;
+  }
+
+    &.h2__primary {
+      color: $title-primary;
+      //text-shadow: 0 0 5px black;
+    }
+    &.h2__secundary {
+      color: $title-secundary;
     }
 }
 
-h4 {
-  color: $font-secundary;
+h3 {
+    font-size: 19px;
+    
+    @include tablet {
+        font-size: 23px;
+        height: auto;
+    } 
+    @include desktop {
+      font-size: 28px;
+      height: auto;
+  } 
+    
+    &.h3__primary {
+      color: $subtitle-primary;
+    }
+    &.h3__secundary {
+      color: $subtitle-secundary;
+    }
+}
+
+
+p {
+  font-size: 1.7em;
+  line-height: 1.2em;
+  
+  @include tablet {
+      font-size: 25px;
+      line-height: 30px;
+      height: auto;
+  }
+
+  @include desktop {
+    font-size: 25px;
+    line-height: 35px;
+    height: auto;
+ }
+
+  &.p__presentation {
+    color: white;
+  }
+
+  &.p__item{
     font-size: 15px;
     margin-block: auto;
     
     @include tablet {
-        font-size: 31px;
+        font-size: 20px;
         margin-block: auto;
-        //line-height: 64px;
-        //height: auto;
     }
-}
+    @include desktop {
+      font-size: 24px;
+      margin-block: auto;
+  }
+  }
 
+  &.p__normal{
+    font-weight: 100;
+    font-size: 15px;
+    line-height: 1.5em;
+    margin-block: auto;
+    
+    @include tablet {
+        font-size: 20px;
+        line-height: 30px;
+        margin-block: auto;
+    }
+    @include desktop {
+      font-size: 23px;
+      line-height: 34px;
+      margin-block: auto;
+    }
+  }
+
+  &.p__title{
+    font-size: 15px;
+    line-height: 1.3em;
+    
+    @include tablet {
+        font-size: 20px;
+        line-height: 25px;
+        height: auto;
+    }
+
+    @include desktop {
+      font-size: 23px;
+      line-height: 25px;
+      height: auto;
+    }
+  }
+
+  &.p__item{
+    font-size: 12px;
+    line-height: 1.5em;
+    font-weight: 100;
+    
+    @include tablet {
+        font-size: 14px;
+        line-height: 25px;
+        font-weight: 100;
+    }
+
+    @include desktop {
+      font-size: 17px;
+      line-height: 25px;
+      font-weight: 100;
+    }
+  }
+
+  
+
+  &.p__primary {
+    color: $font-primary;
+  }
+  &.p__primary {
+    color: $font-secundary;
+  }
+  &.p__accent {
+    color: $title-item;
+  }
+}
 
 
 
