add class for display none

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <app-about-me class ="section" id="section1" [aboutMe] = "aboutMe"></app-about-me>
   <app-bubble></app-bubble>
   <app-knowledge  class ="section" id = "section2" [knowledges] = "knowledges"></app-knowledge>
-  <app-fav-button class="hidden-tablet hidden-desktop" [sections] = "sections"></app-fav-button>
+  <app-fav-button class="none-tablet none-desktop" [sections] = "sections"></app-fav-button>
 </div>
 
 <app-footer></app-footer>
