--- a/src/app/image-item/image-item.component.scss
+++ b/src/app/image-item/image-item.component.scss
@@ -116,7 +116,7 @@
             text-align: initial;
             & .highlights_item {
                 margin-right: 5px;
-                background-color: mediumturquoise;
+                background-color: $theme-secundary;
                 padding: 0px 10px 0px;
                 border-radius: 50px;
                 font-weight: bold;
