--- a/src/app/fav-button/fav-button.component.scss
+++ b/src/app/fav-button/fav-button.component.scss
@@ -1,3 +1,4 @@
+@import "../../styles.scss";
 
 .items-menu {
     color: primary,
@@ -16,9 +17,9 @@ button.md-fab-bottom-left {
 }
 
 a:hover {
-    color:deeppink;
+    color:$theme-secundary;
     font-weight: bolder;
     mat-icon{
-        color: deeppink;
+        color: $theme-secundary;
     }
 }
